# transfomer_slides

./: .gitignore  index.html
demo/: auto.ipynb  pipelines.ipynb  pyproject.toml  train.ipynb  train.py
slides/: advanced_libraries.md  auto_classes.md  core_libraries.md  ecosystem.md  pipeline.md  stack.md  takeaways.md  trainer.md
