[project]
name = "demo"
version = "0.1.0"
description = "transformers demo"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "peft>=0.17.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "torch>=2.7.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
